--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@
 RPi.GPIO >= 0.7.1
 board >= 1.0
 adafruit-extended-bus >= 1.0.2
-adafruit-circuitpython-tsl2591 >= 1.3.12
+adafruit-circuitpython-tsl2591 >= 1.4.2
 
 # For use with the tca9548a multiplexer
-adafruit-circuitpython-tca9548a >= 0.7.0
+adafruit-circuitpython-tca9548a >= 0.8.0
 
 # For the REST API
 flask >= 2.2.5
@@ -14,4 +14,4 @@ flask >= 2.2.5
 # For the graph tools
 pandas >= 1.3.5
 scipy >= 1.4.1
-
+matplotlib >= 3.10.0
